--- a/assets/strava.css
+++ b/assets/strava.css
@@ -1,22 +1,25 @@
 .hero {
-    font-size: 4em;
-    line-height: 1.2em;
     margin-bottom: 2em;
+}
+
+.hero > p {
+    font-size: 4vw;
+    line-height: 1.4em;
 }
 
 body {
     font-family: Fira Sans;
-    font-weight: 200;
+    font-weight: 300;
     color: #111;
     background-color: #eee;
 }
 
 .block {
     width: 100%;
-    margin-top: 0.5em;
-    padding-left: 30%;
-    padding-top: 0.25em;
-    padding-bottom: 0.25em;
+    margin-top: 1vh;
+    padding-left: 30vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
 }
 
 b {
@@ -25,5 +28,10 @@ b {
 }
 
 .container {
-    margin: 5em;
+    margin: 10vh;
+}
+
+p {
+    font-size: 4vh;
+    line-height: 1.4em;
 }
